2023-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (GetGeometry): Improve geometry parser to
	validate that parsed double values do not underflow or overflow
	when cast to 'unsigned long' or 'long' types.

	* coders/mpc.c (ReadMPCImage): If an attribute appears multiple
	times in the MPC header, only set it once.

	* coders/miff.c (ReadMIFFImage): If an attribute appears multiple
	times in the MIFF header, only set it once.

	* magick/attribute.c (SetImageAttribute): Fix bounds issue when
	concatenating string (SourceForge issue #706 test case 'bug11');

2023-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/tests/gen-tiff-images/genimages: Added a script to
	produce a large number of TIFF files (736 files!) using various
	sample depths and great many other permutations supportable by
	libtiff.  This is both a technology demo of GraphicsMagick (and
	libtiff) as well as a way to generate interesting test inputs for
	other software.  While much of this work existed previously, it is
	included with GraphicsMagick in response to Sebastian Rasmussen's
	post to the GM-help mailing list on March 24 regarding "A set of
	old TIFF sample files..?".

2023-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile-private.h: Added a new private implementation
	header file.

	* coders/png.c: EXIF header implementation details/refinements.

	* coders/webp.c: Add/remove the internally expected 6-byte JPEG
	APP1 "Exif\0\0" header to/from the pristine Exif blob. Addresses
	SourceForge #696 "WebP Exif handling bug.

2023-03-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jxl.c (ReadJXLImage): Fix JXL EXIF offset handling, and
	deal with any EOI marker. (From SourceForge patch #69 submitted by
	Milos Komarcevic).

	* coders/heif.c (ReadHEIFImage): Fix HEIF EXIF offset handling,
	and deal with any EOI marker.  Also fix HEIF XMP parsing. (From
	SourceForge patch #69 submitted by Milos Komarcevic).
