@@ -8140,20 +8140,20 @@ static MagickPassFail WriteOnePNGImage(MngInfo *mng_info,
       if (image->units == PixelsPerInchResolution)
         {
           unit_type=PNG_RESOLUTION_METER;
-          x_resolution=(png_uint_32) ((100.0*image->x_resolution+0.5)/2.54);
-          y_resolution=(png_uint_32) ((100.0*image->y_resolution+0.5)/2.54);
+          x_resolution=(png_uint_32) MagickDoubleToUInt((100.0*image->x_resolution+0.5)/2.54);
+          y_resolution=(png_uint_32) MagickDoubleToUInt((100.0*image->y_resolution+0.5)/2.54);
         }
       else if (image->units == PixelsPerCentimeterResolution)
         {
           unit_type=PNG_RESOLUTION_METER;
-          x_resolution=(png_uint_32) (100.0*image->x_resolution+0.5);
-          y_resolution=(png_uint_32) (100.0*image->y_resolution+0.5);
+          x_resolution=(png_uint_32) MagickDoubleToUInt(100.0*image->x_resolution+0.5);
+          y_resolution=(png_uint_32) MagickDoubleToUInt(100.0*image->y_resolution+0.5);
         }
       else
         {
           unit_type=PNG_RESOLUTION_UNKNOWN;
-          x_resolution=(png_uint_32) image->x_resolution;
-          y_resolution=(png_uint_32) image->y_resolution;
+          x_resolution=(png_uint_32) MagickDoubleToUInt(image->x_resolution);
+          y_resolution=(png_uint_32) MagickDoubleToUInt(image->y_resolution);
         }
 
       png_set_pHYs(ping,ping_info,x_resolution,y_resolution,unit_type);
@@ -8163,9 +8163,9 @@ static MagickPassFail WriteOnePNGImage(MngInfo *mng_info,
         (void) LogMagickEvent(CoderEvent,GetMagickModule(),
              "    Setting up pHYs chunk");
         (void) LogMagickEvent(CoderEvent,GetMagickModule(),
-             "      x_resolution=%lu",(unsigned long) x_resolution);
+             "      x_resolution=%u",(unsigned int) x_resolution);
         (void) LogMagickEvent(CoderEvent,GetMagickModule(),
-             "      y_resolution=%lu",(unsigned long) y_resolution);
+             "      y_resolution=%u",(unsigned int) y_resolution);
         (void) LogMagickEvent(CoderEvent,GetMagickModule(),
              "      unit_type=%lu",(unsigned long) unit_type);
       }
