@@ -1,8 +1,13 @@
 2023-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/png.c (WriteOnePNGImage): Address undefined behavior
+	while converting floating point resolution to unsigned integer.
+	(SourceForge issue #706 test case 'bug19');
+
 	* magick/utility.c (GetGeometry): Improve geometry parser to
 	validate that parsed double values do not underflow or overflow
-	when cast to 'unsigned long' or 'long' types.
+	when cast to 'unsigned long' or 'long' types. (SourceForge issue
+	#706 test case 'bug11');
 
 	* coders/mpc.c (ReadMPCImage): If an attribute appears multiple
 	times in the MPC header, only set it once.
